# coffee_api

./: .env-example  .gitignore  README.md  STRUCTURE.md  alembic.ini  pyproject.toml
app/: main.py
app/core/: unitofwork.py
app/core/config/: __init__.py  config.py  logging.py  paths.py
app/core/di/: __init__.py  uow.py  user.py
app/core/exceptions/: __init__.py  auth.py  base.py  user.py
app/core/integrations/mail/: auth.py  base.py
app/core/migrations/: env.py
app/core/migrations/versions/: 6bb1e50f9482_init.py
app/core/security/: cookies.py  token.py
app/core/templates/mail/: base.html  head.html  verification.html
app/core/utils/: singleton.py
app/models/: __init__.py
app/models/v1/: auth.py  base.py  user.py
app/repositories/: __init__.py
app/repositories/v1/: auth.py  base.py  user.py
app/routes/: base.py
app/routes/v1/: __init__.py  auth.py  user.py
app/schemas/: __init__.py
app/schemas/v1/: base.py  error.py
app/schemas/v1/auth/: exception.py  request.py  response.py
app/schemas/v1/user/: schemas.py
app/services/v1/auth/: data_manager.py  manager.py  service.py
app/services/v1/user/: data_manager.py  service.py
