[project]
name = "coffee-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "fastapi>=0.115.12",
    "fastapi-mail>=1.5.0",
    "greenlet>=3.2.3",
    "loguru>=0.7.3",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.5",
    "python-jose[cryptography]>=3.5.0",
    "pytz>=2025.2",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.3",
]
